@@ -1,0 +1,3 @@
+import numpy as np
+
+np.random.seed(2021)
