@@ -1,0 +1,3 @@
+import torch
+
+torch.manual_seed(2021)
