@@ -1,7 +1,0 @@
-import torch
-import random
-import numpy as np
-
-np.random.seed(2021)
-torch.manual_seed(2021)
-random.seed(2021)
